exposed a new endpoint.
Hit `/api/og-image` and pass in the `url` parameter of the site you want to screenshot.

You get back a URL with a link back to the screenshot for a webpage.

--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   "dependencies": {
     "@dotenvx/dotenvx": "^1.33.0",
     "axios": "^1.7.9",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "formdata-node": "^6.0.3",
     "mongodb": "^6.12.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node-fetch": "^3.3.2"
   }
 }
