--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "develop": "dotenvx run -f .env.development -- node index.js"
+    "start": "nodemon index.js",
+    "develop": "dotenvx run -f .env.development -- nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -29,5 +29,8 @@
     "mongodb": "^6.12.0",
     "mysql": "^2.18.1",
     "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
