--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production node index.js",
-    "dev": "dotenvx run -f .env.development -- node index.js",
+    "dev": "NODE_ENV=development dotenvx run -f .env.development -- nodemon index.js",
     "hotdev": "NODE_ENV=development dotenvx run -f .env.development -- nodemon index.js"
   },
   "repository": {
