--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "formdata-node": "^6.0.3",
     "mongodb": "^6.12.0",
     "mysql": "^2.18.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
