--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mysql": "^2.18.1",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
+    "rcon-client": "^4.2.5",
     "ws": "^8.18.3"
   },
   "devDependencies": {
