--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "form-data": "^4.0.5",
     "formdata-node": "^6.0.3",
     "mongodb": "^6.12.0",
     "mysql": "^2.18.1",
