--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "rcon-client": "^4.2.5",
+    "ssh2-sftp-client": "^12.0.1",
     "ws": "^8.18.3"
   },
   "devDependencies": {
